exports[`Storyshots Brand default 1`] = `
<span
  className="Brand">
  Ojek 
  <i
    aria-hidden="true"
    className="fa fa-motorcycle" />
  <i
    aria-hidden="true"
    className="fa fa-shopping-cart" />
   Belanja
</span>
`;

exports[`Storyshots Button icon 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-icon Button-secondary"
    disabled={true}
    onClick={[Function]}
    title="Hapus"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-trash fa-lg" />
  </button>
</div>
`;

exports[`Storyshots Button text 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-fullwidth"
    disabled={false}
    onClick={[Function]}
    title=""
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-shopping-cart fa-lg" />
     Beli
  </button>
</div>
`;

exports[`Storyshots Card disabled 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <li>
    <div
      className="Card">
      <div
        className="Card-image">
        <img
          alt="Ayam Fillet"
          src="test-file-stub" />
        <div
          className="Card-ribbon-wrapper">
          <div
            className="Card-ribbon">
            Diskon 10%
          </div>
        </div>
        <div
          className="Card-tooltip">
          Minimum pembelian 1 kg
        </div>
      </div>
      <div
        className="Card-content">
        <div
          className="Card-content-title">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet
            </span>
          </span>
        </div>
        <div
          className="Card-content-description">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet Paha
            </span>
          </span>
        </div>
      </div>
      <div
        className="Card-action">
        <div
          className="Card-action-price-parent">
          <span
            className="Card-action-price">
            Rp 42,000
          </span>
          <span
            className="Card-action-unit">
             / kg
          </span>
        </div>
        <div>
          <button
            className="Button Button-fullwidth"
            disabled={true}
            onClick={undefined}
            title=""
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-ban fa-lg" />
             Stok Habis
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Card with 1 action button 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <li>
    <div
      className="Card">
      <div
        className="Card-image">
        <img
          alt="Ayam Fillet"
          src="test-file-stub" />
        
        
        
      </div>
      <div
        className="Card-content">
        <div
          className="Card-content-title">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet
            </span>
          </span>
        </div>
        <div
          className="Card-content-description">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet Paha
            </span>
          </span>
        </div>
      </div>
      <div
        className="Card-action">
        <div
          className="Card-action-price-parent">
          <span
            className="Card-action-price">
            Rp 42,000
          </span>
          <span
            className="Card-action-unit">
             / kg
          </span>
        </div>
        <div>
          <div>
            <button
              className="Button Button-fullwidth"
              disabled={undefined}
              onClick={[Function]}
              title=""
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-cart-plus fa-lg" />
               Beli
            </button>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Card with 2 action buttons 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <li>
    <div
      className="Card Card-is-selected">
      <div
        className="Card-image">
        <img
          alt="Ayam Fillet"
          src="test-file-stub" />
        <div
          className="Card-image-overlay">
          <div
            className="Card-image-overlay-qty">
            750 gram
          </div>
        </div>
        <div
          className="Card-ribbon-wrapper">
          <div
            className="Card-ribbon">
            Diskon 10%
          </div>
        </div>
        <div
          className="Card-tooltip">
          Minimum pembelian 1 kg
        </div>
      </div>
      <div
        className="Card-content">
        <div
          className="Card-content-title">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet
            </span>
          </span>
        </div>
        <div
          className="Card-content-description">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Ay
            </mark>
            <span
              className=""
              style={undefined}>
              am Fillet Paha
            </span>
          </span>
        </div>
      </div>
      <div
        className="Card-action">
        <div
          className="Card-action-price-parent">
          <span
            className="Card-action-price">
            Rp 42,000
          </span>
          <span
            className="Card-action-unit">
             / kg
          </span>
        </div>
        <div>
          <div>
            <div>
              <button
                className="Card-action-minus Button Button-icon Button-secondary"
                disabled={undefined}
                onClick={[Function]}
                title="Kurangi"
                type="button">
                <i
                  aria-hidden="true"
                  className="fa fa-minus fa-lg" />
              </button>
              <button
                className="Card-action-plus Button Button-icon"
                disabled={undefined}
                onClick={[Function]}
                title="Tambahkan"
                type="button">
                <i
                  aria-hidden="true"
                  className="fa fa-plus fa-lg" />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Card with link button 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <li>
    <div
      className="Card">
      <div
        className="Card-image">
        <img
          alt="Jejen"
          src="test-file-stub" />
        
        
        
      </div>
      <div
        className="Card-content">
        <div
          className="Card-content-title">
          <span
            className={undefined}>
            <mark
              className=" "
              style={Object {}}>
              Jeje
            </mark>
            <span
              className=""
              style={undefined}>
              n
            </span>
          </span>
        </div>
        <div
          className="Card-content-description">
          <span
            className={undefined}>
            <span
              className=""
              style={undefined}>
              Sadang Serang & Sekeloa
            </span>
          </span>
        </div>
      </div>
      <div
        className="Card-action">
        <div
          className="Card-action-price-parent">
          <span
            className="Card-action-price">
            Rp 2,000
          </span>
          <span
            className="Card-action-unit">
             / pengiriman
          </span>
        </div>
        <a
          href="/toko/jejen"
          onClick={[Function]}>
          <button
            className="Button Button-fullwidth"
            disabled={undefined}
            onClick={undefined}
            title=""
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-shopping-cart fa-lg" />
             Mulai Belanja
          </button>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots DescriptionList default 1`] = `
<dl
  className="DescriptionList">
  <dt>
    No. Pesanan
  </dt>
  <dd>
    -
  </dd>
  <dt>
    Nama
  </dt>
  <dd>
    Ojek Belanja
  </dd>
</dl>
`;

exports[`Storyshots FilterCards is Error 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
    }
  }>
  <div
    className="l-FilterCards">
    <main
      className="l-main">
      <p>
        Error: 
        <code>
          Unable to establish connection
        </code>
      </p>
    </main>
  </div>
</ul>
`;

exports[`Storyshots FilterCards is Fetching 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
    }
  }>
  <div
    className="l-FilterCards">
    <i
      className="fa fa-spinner fa-pulse fa-3x fa-fw" />
    <span
      className="sr-only">
      Loading...
    </span>
  </div>
</ul>
`;

exports[`Storyshots FilterCards with Sections 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
    }
  }>
  <div
    className="l-FilterCards">
    <section
      className="Section l-FilterCards-grid">
      <label
        className="Section-label"
        htmlFor="ayam">
        <span
          className={undefined}>
          <mark
            className=" "
            style={Object {}}>
            A
          </mark>
          <span
            className=""
            style={undefined}>
            y
          </span>
          <mark
            className=" "
            style={Object {}}>
            a
          </mark>
          <span
            className=""
            style={undefined}>
            m
          </span>
        </span>
      </label>
      <hr
        className="Section-separator" />
      <ul
        className="l-FilterCards-grid"
        id="ayam">
        <li>
          <div
            className="Card Card-is-selected">
            <div
              className="Card-image">
              <img
                alt="Ayam Fillet"
                src="test-file-stub" />
              <div
                className="Card-image-overlay">
                <div
                  className="Card-image-overlay-qty">
                  750 gram
                </div>
              </div>
              <div
                className="Card-ribbon-wrapper">
                <div
                  className="Card-ribbon">
                  Diskon
                </div>
              </div>
              <div
                className="Card-tooltip">
                Diskon Akhir Pekan
              </div>
            </div>
            <div
              className="Card-content">
              <div
                className="Card-content-title">
                <span
                  className={undefined}>
                  <mark
                    className=" "
                    style={Object {}}>
                    A
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    y
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    m Fillet
                  </span>
                </span>
              </div>
              <div
                className="Card-content-description">
                <span
                  className={undefined}>
                  <mark
                    className=" "
                    style={Object {}}>
                    A
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    y
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    m Fillet
                  </span>
                </span>
              </div>
            </div>
            <div
              className="Card-action">
              <div
                className="Card-action-price-parent">
                <span
                  className="Card-action-price">
                  Rp 42,000
                </span>
                <span
                  className="Card-action-unit">
                   / kg
                </span>
              </div>
              <div>
                <div>
                  <div>
                    <button
                      className="Card-action-minus Button Button-icon Button-secondary"
                      disabled={undefined}
                      onClick={[Function]}
                      title="Kurangi"
                      type="button">
                      <i
                        aria-hidden="true"
                        className="fa fa-minus fa-lg" />
                    </button>
                    <button
                      className="Card-action-plus Button Button-icon"
                      disabled={undefined}
                      onClick={[Function]}
                      title="Tambahkan"
                      type="button">
                      <i
                        aria-hidden="true"
                        className="fa fa-plus fa-lg" />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
    <section
      className="Section l-FilterCards-grid">
      <label
        className="Section-label"
        htmlFor="bumbu">
        <span
          className={undefined}>
          <span
            className=""
            style={undefined}>
            Bumbu
          </span>
        </span>
      </label>
      <hr
        className="Section-separator" />
      <ul
        className="l-FilterCards-grid"
        id="bumbu">
        <li>
          <div
            className="Card">
            <div
              className="Card-image">
              <img
                alt="Bawang Putih"
                src="test-file-stub" />
            </div>
            <div
              className="Card-content">
              <div
                className="Card-content-title">
                <span
                  className={undefined}>
                  <span
                    className=""
                    style={undefined}>
                    B
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    w
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    ng Putih
                  </span>
                </span>
              </div>
              <div
                className="Card-content-description">
                <span
                  className={undefined}>
                  <span
                    className=""
                    style={undefined}>
                    B
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    w
                  </span>
                  <mark
                    className=" "
                    style={Object {}}>
                    a
                  </mark>
                  <span
                    className=""
                    style={undefined}>
                    ng Putih
                  </span>
                </span>
              </div>
            </div>
            <div
              className="Card-action">
              <div
                className="Card-action-price-parent">
                <span
                  className="Card-action-price">
                  Rp 35,000
                </span>
                <span
                  className="Card-action-unit">
                   / kg
                </span>
              </div>
              <div>
                <button
                  className="Button Button-fullwidth"
                  disabled={true}
                  onClick={undefined}
                  title=""
                  type="button">
                  <i
                    aria-hidden="true"
                    className="fa fa-ban fa-lg" />
                   Stok Habis
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
  </div>
</ul>
`;

exports[`Storyshots FilterCards without Sections 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
    }
  }>
  <div
    className="l-FilterCards">
    <ul
      className="l-FilterCards-grid">
      <li>
        <div
          className="Card">
          <div
            className="Card-image">
            <img
              alt="Jejen"
              src="test-file-stub" />
            <div
              className="Card-ribbon-wrapper">
              <div
                className="Card-ribbon">
                Promo
              </div>
            </div>
            <div
              className="Card-tooltip">
              Promo Akhir Tahun
            </div>
          </div>
          <div
            className="Card-content">
            <div
              className="Card-content-title">
              <span
                className={undefined}>
                <span
                  className=""
                  style={undefined}>
                  Jejen
                </span>
              </span>
            </div>
            <div
              className="Card-content-description">
              <span
                className={undefined}>
                <span
                  className=""
                  style={undefined}>
                  Sad
                </span>
                <mark
                  className=" "
                  style={Object {}}>
                  an
                </mark>
                <span
                  className=""
                  style={undefined}>
                  g Ser
                </span>
                <mark
                  className=" "
                  style={Object {}}>
                  an
                </mark>
                <span
                  className=""
                  style={undefined}>
                  g & Sekeloa
                </span>
              </span>
            </div>
          </div>
          <div
            className="Card-action">
            <div
              className="Card-action-price-parent">
              <span
                className="Card-action-price">
                Rp 5,000
              </span>
              <span
                className="Card-action-unit">
                 / pengiriman
              </span>
            </div>
            <a
              href="/toko/jejen"
              onClick={[Function]}>
              <button
                className="Button Button-fullwidth"
                disabled={undefined}
                onClick={undefined}
                title=""
                type="button">
                <i
                  aria-hidden="true"
                  className="fa fa-shopping-cart fa-lg" />
                 Mulai Belanja
              </button>
            </a>
          </div>
        </div>
      </li>
      <li>
        <div
          className="Card Card-is-selected">
          <div
            className="Card-image">
            <img
              alt="Zaenal"
              src="test-file-stub" />
            <div
              className="Card-image-overlay">
              <div
                className="Card-image-overlay-qty">
                Cuti
              </div>
            </div>
          </div>
          <div
            className="Card-content">
            <div
              className="Card-content-title">
              <span
                className={undefined}>
                <span
                  className=""
                  style={undefined}>
                  Zaenal
                </span>
              </span>
            </div>
            <div
              className="Card-content-description">
              <span
                className={undefined}>
                <span
                  className=""
                  style={undefined}>
                  Jatih
                </span>
                <mark
                  className=" "
                  style={Object {}}>
                  an
                </mark>
                <span
                  className=""
                  style={undefined}>
                  dap & Padasuka
                </span>
              </span>
            </div>
          </div>
          <div
            className="Card-action">
            <div
              className="Card-action-price-parent">
              <span
                className="Card-action-price">
                Rp 3,000
              </span>
              <span
                className="Card-action-unit">
                 / pengiriman
              </span>
            </div>
            <a
              href="/toko/zaenal"
              onClick={[Function]}>
              <button
                className="Button Button-fullwidth"
                disabled={undefined}
                onClick={undefined}
                title=""
                type="button">
                <i
                  aria-hidden="true"
                  className="fa fa-shopping-cart fa-lg" />
                 Mulai Belanja
              </button>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
</ul>
`;

exports[`Storyshots FilterInput with Button 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <form
    className="l-FilterInput"
    onSubmit={[Function]}>
    <input
      className="FilterInput FilterInput-txt"
      onChange={[Function]}
      placeholder="Cari Produk"
      type="search"
      value="ay" />
    <button
      className="FilterInput FilterInput-btn Button Button-icon Button-small"
      disabled={undefined}
      onClick={undefined}
      title="Cari"
      type="submit">
      <i
        aria-hidden="true"
        className="fa fa-search" />
    </button>
  </form>
</ul>
`;

exports[`Storyshots FilterInput without Button 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
      "width": 200,
    }
  }>
  <div
    className="l-FilterInput l-FilterInput-no-btn">
    <input
      className="FilterInput FilterInput-txt FilterInput-txt-no-btn"
      onChange={[Function]}
      placeholder="Cari Nama atau Area Layanan"
      type="search"
      value="" />
    <span
      className="FilterInput-txt-search-icon">
      <i
        aria-hidden="true"
        className="fa fa-search" />
    </span>
  </div>
</ul>
`;

exports[`Storyshots Form with Footer 1`] = `
<form
  className="Form"
  name="with-footer"
  onSubmit={undefined}>
  <header
    className="Form-header">
    <div
      className="Form-header-title">
      <i
        aria-hidden="true"
        className="fa fa-lg fa-shopping-cart" />
       Pesanan Anda
    </div>
    <div
      className="Form-header-action">
      <div>
        Header
      </div>
    </div>
  </header>
  <main
    className="Form-body">
    <div
      style={
        Object {
          "height": 200,
        }
      }>
      Content
    </div>
  </main>
  <footer
    className="Form-footer">
    <div>
      Footer
    </div>
  </footer>
</form>
`;

exports[`Storyshots Form without Footer 1`] = `
<form
  className="Form"
  name="with-footer"
  onSubmit={undefined}>
  <header
    className="Form-header">
    <div
      className="Form-header-title">
      <i
        aria-hidden="true"
        className="fa fa-lg fa-address-card" />
       Data Pemesan
    </div>
    <div
      className="Form-header-action">
      <div>
        Header
      </div>
    </div>
  </header>
  <main
    className="Form-body">
    <div
      style={
        Object {
          "height": 200,
        }
      }>
      Content
    </div>
  </main>
</form>
`;

exports[`Storyshots FormFields with TextField & TextArea 1`] = `
<form
  className="Form"
  name="pemesan"
  onSubmit={undefined}>
  <header
    className="Form-header">
    <div
      className="Form-header-title">
      <i
        aria-hidden="true"
        className="fa fa-lg fa-address-card" />
       Data Pemesan
    </div>
    <div
      className="Form-header-action">
      <div>
        Header
      </div>
    </div>
  </header>
  <main
    className="Form-body">
    <div
      className="TextField">
      <label
        className="TextField-label"
        htmlFor="email">
        Email
      </label>
      <input
        className="TextField-input TextField-input-fullwidth"
        id="email"
        max={100}
        min={0}
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Alamat Email"
        required={true}
        step={1}
        type="email"
        value="" />
    </div>
    <div
      className="TextArea">
      <label
        className="TextArea-label"
        htmlFor="address">
        Alamat
      </label>
      <textarea
        className="TextArea-input TextArea-input-fullwidth"
        id="address"
        name="address"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Alamat Lengkap"
        required={true}
        rows={4}
        value="" />
    </div>
  </main>
  <footer
    className="Form-footer">
    <div>
      Footer
    </div>
  </footer>
</form>
`;

exports[`Storyshots Section default 1`] = `
<ul
  style={
    Object {
      "textAlign": "center",
    }
  }>
  <section
    className="Section">
    <label
      className="Section-label"
      htmlFor="section">
      <span
        className={undefined}>
        <span
          className=""
          style={undefined}>
          S
        </span>
        <mark
          className=" "
          style={Object {}}>
          ect
        </mark>
        <span
          className=""
          style={undefined}>
          ion
        </span>
      </span>
    </label>
    <hr
      className="Section-separator" />
    <div />
  </section>
</ul>
`;

exports[`Storyshots TextField with email type 1`] = `
<div
  className="TextField">
  <label
    className="TextField-label"
    htmlFor="email">
    Email
  </label>
  <input
    className="TextField-input TextField-input-fullwidth"
    id="email"
    max={100}
    min={0}
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Alamat Email"
    required={true}
    step={1}
    type="email"
    value="" />
</div>
`;
